Prevent dumb button styles on mobile webkit

--- a/src/client/sass/modules/_rsvp.scss
+++ b/src/client/sass/modules/_rsvp.scss
@@ -39,6 +39,7 @@
             outline: none;
             padding: 5px;
             transition: opacity 0.2s;
+            -webkit-appearance: none;
             &:hover {
                 opacity: 0.6;
             }
